--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3856,6 +3856,7 @@ body.dark .responsive-navigation {
 }
 
 .main-responsiveside {
+  z-index: 9999;
   visibility: hidden;
   opacity: 0;
   transition: 0.5s all;
